--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ mapboxgl.accessToken = 'pk.eyJ1IjoibmN1YmEiLCJhIjoiY2psMm5kdnJ0MXNtNTNrcDRwMWlid
 var map = new mapboxgl.Map({
     container: 'map', // container id
     style: 'mapbox://styles/mapbox/streets-v9', // stylesheet location
-    center: [-74.50, 40], // starting position [lng, lat]
+    center: [-74.00390625, 45.38301927899065], // starting position [lng, lat]
     zoom: 9 // starting zoom
 });
 </script>
