--- a/index.html
+++ b/index.html
@@ -77,6 +77,8 @@ p {
 <body>
 
 <div id='map'></div>
+<div class='map-overlay' id='features'><h2>Canada Indigenous Population</h2><div id='pd'><p>Hover over a province!</p></div></div>
+<div class='map-overlay' id='legend'></div>
 <script>
 mapboxgl.accessToken = 'pk.eyJ1IjoibmN1YmEiLCJhIjoiY2psMm5kdnJ0MXNtNTNrcDRwMWlidjM4byJ9.mfUg7vmiawiLYS0BoBIKPw';
 var map = new mapboxgl.Map({
